--- a/Coursera/html/index.html
+++ b/Coursera/html/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>03-01 Pseudo Classes and Elements - University of Michigan | Coursera</title>
     <link rel="icon" type="image/icon" href="favicon.ico">
-    <link rel="stylesheet" href="..\css\fontawsome\css\all.css">
-    <link rel="stylesheet" href="..\css\defult stylesheet.css">
-    <link rel="stylesheet" href="..\css\header stylesheet.css">
-    <link rel="stylesheet" href="..\css\main stylesheet.css">
+    <link rel="stylesheet" href="../css/fontawsome/css/all.css">
+    <link rel="stylesheet" href="../css/defult stylesheet.css">
+    <link rel="stylesheet" href="../css\header stylesheet.css">
+    <link rel="stylesheet" href="../css/main stylesheet.css">
   </head>
 
   <body>
