--- a/Coursera/html/index.html
+++ b/Coursera/html/index.html
@@ -85,7 +85,7 @@
       <div class="video-container">
         <h2 class="video-name">03-01 Pseudo Classes and Elements</h2>
 
-        <video src="03-01_Pseudo_Classes_and_Elements.webm" poster="./posterimage.JPG" controls>
+        <video src="03-01_Pseudo_Classes_and_Elements.webm" poster="posterimage.JPG" controls>
           Your browser dose not support video tag.
         </video>
 
@@ -208,7 +208,7 @@
 
       <div class="notes">
         <h3>Notes</h3>
-        <img src="./notes.JPG">
+        <img src="notes.JPG">
         <p>Click the “Save Note” button when you want to capture a screen.
           You can also highlight and save lines from the transcript below.
           Add your own notes to anything you’ve captured.</p>
