--- a/Coursera/html/index.html
+++ b/Coursera/html/index.html
@@ -101,7 +101,7 @@
           </span>
 
           <span id="download">
-            <a href="https://d3c33hcgiwev3.cloudfront.net/8_0sRHLpEeWcehImKNcI6w.processed/full/360p/index.mp4?Expires=1603670400&Signature=ZzrTElfPeHxedS5R6~PcuZ~kxbqIcw03Z9vjCHRhEJEIio6ULZxYEsMQ1QFA4Kc3F-AbkBLFlq7l4xs14IdmnA77aZtcbGjWOgnhMPLKe4NKO5rSWu~CoEjCDFryM9O4BH1jJLZAd0wdf-waKViNRQWSQj9lQ1abGF-bimpljCs_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A">
+            <a href="Resources.zip" download="Resources">
               Download
             </a>
           </span>
